Changelog for JVCL 3.0
======================
2004-09-05
- Added FloatValue to TJvSimpleXML, defaults to 0.0 if Value is not a floating point number // obones
2004-09-04
- Added new component TJvMultiStringHolder and TJvLookupAutoComplete // ahuser
2004-09-02
- TJvCustomAppXMLStorage: Introduced the WhiteSpaceReplacement property that is used when a node
  name contains a white space. Its default value is an empty string, thus forcing people to
  set its value when they receive the exception telling them that an XML node name cannot
  contain white space // obones
2004-08-18
- TJvAnimatedImage: Opaque renamed to Transparent and logic reversed // peter3
2004-08-09
- JvWStrUtils.pas moved to JCL as JclWideStrings.pas // (rom)
- JvParameterList improvements // jfudickar
2004-08-06
- The JvUrlGrabbers now have a Port property and more events that can be triggered. // obones
2004-08-01
- JvAppStorage and JvFormPlacement enhanced for usage of IJvAppStorageHandler, 
  now unpublished Form properties can be stored by JvFormPlacement  //jfudickar
2004-07-27
- run/JvZlibMultiple.pas: Added support for selective extraction and listing archive contents without 
  writing any files to disk. Parameters added to OnDecompressingFile and OnDecompressedFile events. // WPOstma 
2004-07-25
- Started to tighten Shift check for all keyboard input. // (rom)
- Mantis 1912: TJvSpinEdit now has a ShowButton property. // obones
- Bug fix and Mantis 1912: TJvStandardMenuItemPainter now paints correctly its checkmarks if there are
  no image lists set. // obones
2004-07-24
- JvOfficeColorPanel can now select its buttons with a right click. Set RightClickSelect to True if you want that, it
  is False by default to keep the previous behaviour. If there is a popup menu the button will only be selected if
  SelectIfPopup is True (it is False by Default). This is for Mantis #1904 and is based on the code given by cpall  // obones
2004-07-22